Implement call cancellation via "Waiting" button
**Commit Message:**

Added functionality:
- Cancel an ongoing call when the "Waiting" button is pressed
- Elevator stops at the nearest floor
- Canceled call is removed from the queue

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button" data-floor="9">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="8">
           <div>8th</div>
@@ -26,7 +28,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="7">
           <div>7th</div>
@@ -35,7 +39,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="6">
           <div>6th</div>
@@ -44,7 +50,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="5">
           <div>5th</div>
@@ -53,7 +61,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="4">
           <div>4th</div>
@@ -62,7 +72,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="3">
           <div>3rd</div>
@@ -71,7 +83,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="2">
           <div>2nd</div>
@@ -80,7 +94,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="1">
           <div>1st</div>
@@ -89,7 +105,9 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
         <div class="floor" data-floor="0">
           <div>Ground Floor</div>
@@ -98,25 +116,27 @@
           <div class="time-counter" data-elevator="3"></div>
           <div class="time-counter" data-elevator="4"></div>
           <div class="time-counter" data-elevator="5"></div>
-          <button class="call-button">Call</button>
+          <button class="call-button">
+            Call
+          </button>
         </div>
       </div>
     </div>
     <div id="elevators">
       <div class="elevator" data-elevator="1">
-        <div class="elevator-image"></div>
+        <div class="elevator-image" data-elevator="1"></div>
       </div>
       <div class="elevator" data-elevator="2">
-        <div class="elevator-image"></div>
+        <div class="elevator-image" data-elevator="1"></div>
       </div>
       <div class="elevator" data-elevator="3">
-        <div class="elevator-image"></div>
+        <div class="elevator-image" data-elevator="1"></div>
       </div>
       <div class="elevator" data-elevator="4">
-        <div class="elevator-image"></div>
+        <div class="elevator-image" data-elevator="1"></div>
       </div>
       <div class="elevator" data-elevator="5">
-        <div class="elevator-image"></div>
+        <div class="elevator-image" data-elevator="1"></div>
       </div>
     </div>
 
